Relieve listener of the query-publisher queue after timeout
* Introduction the first fragment of the protocol, that a query
  publisher, assumes responses only for the declared timeout
  duration, and then acts accordingly either resolving the
  responses, defaults or throws - this means that any response
  resource is delete/cleared from the listener after the
  fact.

  The examples now shows the initial lifecycle, even though
  there are no responses published yet.